Fixes empty z-index property to be 'auto'.
Fixes a bug that causes a z-index property to have no value. Rather than using 'null' (which results in no value for the property), 'auto' is used instead.

This bug is a problem if you use a build process like Uncss to trim unused CSS. The build will fail as the empty z-index property isn't valid.

--- a/scss/foundation/components/_reveal.scss
+++ b/scss/foundation/components/_reveal.scss
@@ -55,7 +55,7 @@ $close-reveal-modal-class: "close-reveal-modal" !default;
   right: 0;
   background: $reveal-overlay-bg-old; // Autoprefixer should be used to avoid such variables needed when Foundation for Sites can do so in the near future.
   background: $reveal-overlay-bg;
-  z-index: if( $include-z-index-value, 1004, null );
+  z-index: if( $include-z-index-value, 1004, auto );
   display: none;
   #{$default-float}: 0;
 }
